[fix] 調整圖片生成
